crates/formatter/tests/snapshots/snapshots__migrations__000304_github_com_user_id_comment.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
comment on column users.github_com_user_id is 'The GitHub.com numerical user ID. It is used to check if the user has starred the Coder repository. It is also used for filtering users in the users list CLI command, and may become more widely used in the future.';
