crates/formatter/tests/snapshots/snapshots__migrations__000305_remove_greetings_notifications_templates.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update notification_templates
set
	body_template = E'Your workspace **{{.Labels.name}}** was deleted.\n\n'
	|| E'The specified reason was "**{{.Labels.reason}}{{ if .Labels.initiator }} ({{ .Labels.initiator }}){{end}}**".'
where id = 'f517da0b-cdc9-410f-ab89-a86107c420ed';
update notification_templates
set
	body_template = E'Automatic build of your workspace **{{.Labels.name}}** failed.\n\n'
	|| E'The specified reason was "**{{.Labels.reason}}**".'
where id = '381df2a9-c0c0-4749-420f-80a9280c66f9';
update notification_templates
set
	body_template = E'Your workspace **{{.Labels.name}}** has been updated automatically to the latest template version ({{.Labels.template_version_name}}).\n\n'
	|| E'Reason for update: **{{.Labels.template_version_message}}**.'
where id = 'c34a0c09-0704-4cac-bd1c-0c0146811c2b';
update notification_templates
set
	body_template = E'New user account **{{.Labels.created_account_name}}** has been created.\n\n'
	|| E'This new user account was created {{if .Labels.created_account_user_name}}for **{{.Labels.created_account_user_name}}** {{end}}by **{{.Labels.initiator}}**.'
where id = '4e19c0ac-94e1-4532-9515-d1801aa283b2';
update notification_templates
set
	body_template = E'User account **{{.Labels.deleted_account_name}}** has been deleted.\n\n'
	|| E'The deleted account {{if .Labels.deleted_account_user_name}}belonged to **{{.Labels.deleted_account_user_name}}** and {{end}}was deleted by **{{.Labels.initiator}}**.'
where id = 'f44d9314-ad03-4bc8-95d0-5cad491da6b6';
update notification_templates
set
	body_template = E'User account **{{.Labels.suspended_account_name}}** has been suspended.\n\n'
	|| E'The account {{if .Labels.suspended_account_user_name}}belongs to **{{.Labels.suspended_account_user_name}}** and it {{end}}was suspended by **{{.Labels.initiator}}**.'
where id = 'b02ddd82-4733-4d02-a2d7-c36f3598997d';
update notification_templates
set
	body_template = E'Your account **{{.Labels.suspended_account_name}}** has been suspended by **{{.Labels.initiator}}**.'
where id = '6a2f0609-9b69-4d36-a989-9f5925b6cbff';
update notification_templates
set
	body_template = E'User account **{{.Labels.activated_account_name}}** has been activated.\n\n'
	|| E'The account {{if .Labels.activated_account_user_name}}belongs to **{{.Labels.activated_account_user_name}}** and it {{ end }}was activated by **{{.Labels.initiator}}**.'
where id = '9f5af851-8408-4e73-a7a1-c6502ba46689';
update notification_templates
set
	body_template = E'Your account **{{.Labels.activated_account_name}}** has been activated by **{{.Labels.initiator}}**.'
where id = '1a6a6bea-ee0a-43e2-9e7c-eabdb53730e4';
update notification_templates
set
	body_template = E'A manual build of the workspace **{{.Labels.name}}** using the template **{{.Labels.template_name}}** failed (version: **{{.Labels.template_version_name}}**).\nThe workspace build was initiated by **{{.Labels.initiator}}**.'
where id = '2faeee0f-26cb-4e96-821c-85ccb9f71513';
update notification_templates
set
	body_template = E'Template **{{.Labels.template_display_name}}** has failed to build {{.Data.failed_builds}}/{{.Data.total_builds}} times over the last {{.Data.report_frequency}}.

**Report:**
{{range $version := .Data.template_versions}}
**{{$version.template_version_name}}** failed {{$version.failed_count}} time{{if gt $version.failed_count 1.0}}s{{end}}:
{{range $build := $version.failed_builds}}
* [{{$build.workspace_owner_username}} / {{$build.workspace_name}} / #{{$build.build_number}}]({{base_url}}/@{{$build.workspace_owner_username}}/{{$build.workspace_name}}/builds/{{$build.build_number}})
{{- end}}
{{end}}
We recommend reviewing these issues to ensure future builds are successful.'
where id = '34a20db2-e9cc-4a93-b0e4-8569699d7a00';
update notification_templates
set
	body_template = E'Use the link below to reset your password.\n\nIf you did not make this request, you can ignore this message.'
where id = '62f86a30-2330-4b61-a26d-311ff3b608cf';
update notification_templates
set
	body_template = E'The template **{{.Labels.template}}** has been deprecated with the following message:\n\n'
	|| E'**{{.Labels.message}}**\n\n'
	|| E'New workspaces may not be created from this template. Existing workspaces will continue to function normally.'
where id = 'f40fae84-55a2-42cd-99fa-b41c1ca64894';
update notification_templates
set
	body_template = E'The workspace **{{.Labels.workspace}}** has been created from the template **{{.Labels.template}}** using version **{{.Labels.version}}**.'
where id = '281fdf73-c6d6-4cbb-8ff5-888baf8a2fff';
update notification_templates
set
	body_template = E'A new workspace build has been manually created for your workspace **{{.Labels.workspace}}** by **{{.Labels.initiator}}** to update it to version **{{.Labels.version}}** of template **{{.Labels.template}}**.'
where id = 'd089fe7b-d5c5-4c0c-aaf5-689859f7d392';
update notification_templates
set
	body_template = E'Your workspace **{{.Labels.workspace}}** has reached the memory usage threshold set at **{{.Labels.threshold}}**.'
where id = 'a9d027b4-ac49-4fb1-9f6d-45af15f64e7a';
update notification_templates
set
	body_template = E'{{ if eq (len .Data.volumes) 1 }}{{ $volume := index .Data.volumes 0 }}'
	|| E'Volume **`{{$volume.path}}`** is over {{$volume.threshold}} full in workspace **{{.Labels.workspace}}**.'
	|| E'{{ else }}'
	|| E'The following volumes are nearly full in workspace **{{.Labels.workspace}}**\n\n'
	|| E'{{ range $volume := .Data.volumes }}'
	|| E'- **`{{$volume.path}}`** is over {{$volume.threshold}} full\n'
	|| E'{{ end }}'
	|| E'{{ end }}'
where id = 'f047f6a3-5713-40f7-85aa-0394cce9fa3a';
update notification_templates
set body_template = E'This is a test notification.'
where id = 'c425f63e-716a-4bf4-ae24-78348f706c3f';
update notification_templates
set
	body_template = E'The template **{{.Labels.name}}** was deleted by **{{ .Labels.initiator }}**.\n\n'
where id = '29a09665-2a4c-403f-9648-54301670e7be';
update notification_templates
set
	body_template = E'Your workspace **{{.Labels.name}}** has been marked as [**dormant**](https://coder.com/docs/templates/schedule#dormancy-threshold-enterprise) because of {{.Labels.reason}}.\n'
	|| E'Dormant workspaces are [automatically deleted](https://coder.com/docs/templates/schedule#dormancy-auto-deletion-enterprise) after {{.Labels.timeTilDormant}} of inactivity.\n'
	|| E'To prevent deletion, use your workspace with the link below.'
where id = '0ea69165-ec14-4314-91f1-69566ac3c5a0';
update notification_templates
set
	body_template = E'Your workspace **{{.Labels.name}}** has been marked for **deletion** after {{.Labels.timeTilDormant}} of [dormancy](https://coder.com/docs/templates/schedule#dormancy-auto-deletion-enterprise) because of {{.Labels.reason}}.\n'
	|| E'To prevent deletion, use your workspace with the link below.'
where id = '51ce2fdf-c9ca-4be1-8d70-628674f9bc42';
