crates/formatter/tests/snapshots/snapshots__migrations__000306_template_version_terraform_values.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table template_version_terraform_values;
