crates/formatter/tests/snapshots/snapshots__migrations__000309_add_devcontainer_name.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agent_devcontainers drop column name;
