crates/formatter/tests/snapshots/snapshots__migrations__000311_improve_dormant_workspace_notification.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update notification_templates
set
	body_template = E'Your workspace **{{.Labels.name}}** has been marked as [**dormant**](https://coder.com/docs/templates/schedule#dormancy-threshold-enterprise) because of {{.Labels.reason}}.\n'
	|| E'Dormant workspaces are [automatically deleted](https://coder.com/docs/templates/schedule#dormancy-auto-deletion-enterprise) after {{.Labels.timeTilDormant}} of inactivity.\n'
	|| E'To prevent deletion, use your workspace with the link below.'
where id = '0ea69165-ec14-4314-91f1-69566ac3c5a0';
